重构长期记忆功能，主动获取记忆